# fast_hit_emu

./: CMakeLists.txt  README.md  build.sh  setup.sh
include/fast_hit_emu/: TPGCore.hpp  TPGStitch.hpp
pybindsrc/: fast_hit_emu.cpp
python/fast_hit_emu/: stitchmanager.py  tpgmanager.py
scripts/: test.py  test_stitch.py  test_tpg.py  test_tpg_stitching.py  tpg_comp.py  tpg_job.py
src/: TPGCore.cpp  TPGStitch.cpp
